--- a/rsw.toml
+++ b/rsw.toml
@@ -21,7 +21,7 @@ cli = "npm"
 #! 1. wasm-pack: `rsw new <name> --template <template> --mode <normal|noinstall|force>`
 #! 2. rsw: `rsw new <name>`, built-in templates
 #! 3. user: `rsw new <name>`, if `dir` is not configured, use `wasm-pack new <name>` to initialize the project
-using = "wasm-pack"
+using = "rsw"
 #! this field needs to be configured when `using = "user"`
 #! `using = "wasm-pack"` or `using = "rsw"`, this field will be ignored
 #! copy all files in this directory
@@ -32,9 +32,9 @@ dir = "my-template"
 #! When there is only `name`, other fields will use the default configuration
 
 #! 📦 -------- package: rsw-hello --------
-# [[crates]]
+[[crates]]
 # #! npm package name (path: $ROOT/rsw-hello)
-# name = "rsw-hello"
+name = "src-wasm"
 # #! run `npm link`: `true` | `false`, default is `false`
 # link = false
 
