--- a/src-wasm/Cargo.toml
+++ b/src-wasm/Cargo.toml
@@ -1,17 +1,8 @@
-[package]
-name = "src-wasm"
-version = "0.1.0"
-authors = ["qe-present <2664481691@qq.com>"]
-edition = "2024"
-
-[lib]
-crate-type = ["cdylib", "rlib"]
-
-
-
-[dependencies]
+[workspace]
+members = [
+    "app",
+    "window"
+]
+[workspace.dependencies]
 wasm-bindgen = "0.2.100"
-wasm-bindgen-futures = "0.4.41"
-tauri-wasm-copy={path="../../tauri-wasm-copy",features = ["app"]}
-
-
+wasm-bindgen-futures = "0.4.50"
